--- a/DeezerProyecto/app/src/main/res/values/strings.xml
+++ b/DeezerProyecto/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DeezerProyecto</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="clienteid" formatted="false" translatable="false">108229615337-b9so4chd9ijh0tqq2405u2km8866ek8j.apps.googleusercontent.com</string>
 </resources>
